# auto-improve

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  README.md  README.ru.md  SKILL.md  improve.py  pyproject.toml
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  SUPPORT.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
criteria/: README.md  api-design-quality.md  blog-post-quality.md  cold-email-quality.md  prompt-quality.md
examples/: api-design.py  blog-post.md  cold-email.txt  prompt.txt
plot/: Cargo.toml
plot/src/: main.rs
tests/: test_core.py
tools/: make_demo.py  sample-climb.tsv
voice/: README.md  eval_voice.py  improve_voice.py  make_voice.py
voice/criteria/: voice-note.md
voice/examples/: voice-note.txt
